docs(known-issues): round-3 -- heap-corruption false alarm closed, b7a1ed84 exonerated, 2 new real bugs filed
An independent verification pass reported RequestMappingMessageConversionIntegrationTests
failing to complete within 1200s with continuous "implausible object size"
corrupted-header warnings on a fresh dev-tip build, naming commit b7a1ed84's
Arena::free_list_bytes() epoch-cache (round 2 of this same investigation) as
the prime suspect for a real heap-corruption regression.

Investigated with full rigor: fresh worktree, fresh build at the verification
tip, direct A/B reproduction. Result: b7a1ed84 is NOT the cause.

- Code audit found no plausible corruption mechanism in the epoch-cache: every
  free-list mutation site correctly bumps the generation counter; Arena is
  exclusively Mutex-guarded in every backend that uses it (no cross-thread
  race possible); free_list_bytes() is only ever used as a heuristic/estimate,
  never for unsafe pointer arithmetic.
- Direct reproduction first hit an UNRELATED, real, pre-existing bug: Class.
  forName's native implementation (native-builtins/src/lang_class.rs,
  "HIB-CV-26" path, weeks-old code) turns any nested class-init failure into
  an unrecoverable VmError::Internal instead of a catchable Java exception,
  crashing the VM near-instantly unless --enable-native-access is passed.
  Filed as a separate, genuine follow-up bug -- not fixed here (out of scope,
  unrelated subsystem).
- With that unblocked, the actual corruption warnings WERE reproduced --
  confirming the observation was real -- but a direct A/B proves b7a1ed84
  mitigates rather than causes it: the commit immediately BEFORE the arena
  fix showed 679,454 warnings and never completed in 1200s; three trials on
  the current dev tip (with the fix) showed 700-1100 warnings and completed
  reliably in 527-589s (160/160, 160/160, 159/160 passing). The corruption-
  detection-and-resync mechanism itself is old, pre-existing, deliberately-
  built forensic ins